--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "gridsome-source-sanity": "^1.0.5"
   },
   "devDependencies": {
     "node-sass": "^5.0.0",
