Wired up the sanity queries

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "gridsome": "^0.7.0",
-    "gridsome-source-sanity": "^1.0.5"
+    "gridsome-source-sanity": "^1.0.5",
+    "sanity-blocks-vue-component": "^0.1.0"
   },
   "devDependencies": {
     "node-sass": "^5.0.0",
